[package]
name = "reqwest_wine_tls_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate", "rustls-tls-native-roots", "native-tls"] }
tokio = { version = "1.23", features = ["full"] }
futures = "0.3"
